theodolite/examples/http-server/resources/http-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-server
  labels:
    app: http-server
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: public
  - port: 9901
    targetPort: 9901
    name: admin
  selector:
    app: http-server
