theodolite/examples/http-server/resources/load-generator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: load-generator
  labels:
    app: load-generator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: load-generator
  template:
    metadata:
      labels:
        app: load-generator
    spec:
      containers:
      - name: load-generator
        image: curlimages/curl:7.81.0
        env:
        - name: CALLS_PER_SECOND
          value: "10"
        command:
        - "sh"
        - "-c"
        - "SLEEP=$(echo \"scale=4; 1/$CALLS_PER_SECOND\" | bc); while true; do curl -s -o /dev/null -w '%{method} %{url}: %{http_code} %{time_total}\n' http://http-server:80 & sleep $SLEEP; done"
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
          requests:
            memory: "64Mi"
            cpu: "50m"
